added idle animation. literally.

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body{
     display: block;
     position: absolute;
     width: 10px;
-    font-size:35px;
+    font-size:50px;
     text-align: center;
     text-transform: uppercase;
     /*font-family: 'Francois One', sans-serif;*/
@@ -137,7 +137,7 @@ body{
 .num_8 {transform: rotate(270deg);top:30px;}
 .num_9 {transform: rotate(240deg);top:32px;left:8px}
 .num_10 {transform: rotate(210deg); top:35px;left:2px;}
-.num_11 {transform: rotate(180deg); top:35px;left:17px;}
+.num_11 {transform: rotate(180deg); top:35px;left:25px;}
 
 #redline{
     width:28px; height:150px;
@@ -173,6 +173,57 @@ body{
     animation-duration: 4s;
 }
 
+@keyframes pendulum {
+  20% {
+    transform:rotate(-93deg);
+  }
+  50%{
+    transform:rotate(-95deg)
+  }
+  70% {
+    transform:rotate(-93deg);
+  }
+  80%{
+    transform:rotate(-95deg)
+  }
+  90%{
+    transform:rotate(-93deg)
+  }
+}
+    /*10% {
+        transform:rotate(100deg);
+    }*/
+    /*11% {
+        transform:rotate(98deg);
+    }
+    12% {
+        transform:rotate(96deg);
+    }
+    13% {
+        transform:rotate(98deg);
+    }
+    14% {
+        transform:rotate(96deg);
+    }
+    15% {
+        transform:rotate(98deg);
+    }
+    16% {
+        transform:rotate(96deg);
+    }
+    17% {
+        transform:rotate(98deg);
+    }
+    18% {
+        transform:rotate(96deg);
+    }
+    19% {
+        transform:rotate(120deg);
+    }
+    20% {
+        transform:rotate(180deg);
+    }*/
+
 .pin {
     width: 50px;
     height: 50px;
@@ -193,6 +244,6 @@ body{
     margin: 10px auto 0;
     background-color: #343536;
     border-radius: 100%;
-    box-shadow: inset 0 8px 15px 0 rgba(167, 23, 10, 0.4);
+    box-shadow: inset 0 8px 15px 0 rgba(167, 23, 10, 0.9);
     position: relative;
 }
