--- a/style.css
+++ b/style.css
@@ -212,39 +212,6 @@ body{
     transform:rotate(-93deg)
   }
 }
-    /*10% {
-        transform:rotate(100deg);
-    }*/
-    /*11% {
-        transform:rotate(98deg);
-    }
-    12% {
-        transform:rotate(96deg);
-    }
-    13% {
-        transform:rotate(98deg);
-    }
-    14% {
-        transform:rotate(96deg);
-    }
-    15% {
-        transform:rotate(98deg);
-    }
-    16% {
-        transform:rotate(96deg);
-    }
-    17% {
-        transform:rotate(98deg);
-    }
-    18% {
-        transform:rotate(96deg);
-    }
-    19% {
-        transform:rotate(120deg);
-    }
-    20% {
-        transform:rotate(180deg);
-    }*/
 
 .pin {
     width: 50px;
@@ -268,4 +235,21 @@ body{
     border-radius: 100%;
     box-shadow: inset 0 8px 15px 0 rgba(167, 23, 10, 0.9);
     position: relative;
+}
+
+.rotate {
+  animation: rotator;
+  animation-duration: 0.5s;
+}
+
+@keyframes rotator {
+    60% {
+      transform:rotate(50deg);
+    }
+    70% {
+      transform:rotate(100deg);
+    }
+    80% {
+      transform:rotate(120deg);
+    }
 }
